[package]
name = "tar-rsl"
version = "0.1.1"
authors = ["XS <tonycody@qq.com>"]
homepage = "https://github.com/xs-fork/tar-rs"
repository = "https://github.com/xs-fork/tar-rs"
documentation = "https://docs.rs/toml-rsl"
license = "Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
filetime = "0.2.8"
jdks = "0.1.0"
sdkman-cli-native = "0.4.6"
xml-rsl = "0.1.0"
toml-rsl = "0.1.0"
ssh2-rsl = "0.1.0"
crypto-rsl = "0.1.0"

[dev-dependencies]
tempfile = "3"

[target."cfg(unix)".dependencies]
xattr = { version = "1.0", optional = true }
libc = "0.2"

[features]
default = ["xattr"]
